--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.8.0",
+    "drizzle-orm": "^0.30.10",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
@@ -23,6 +24,7 @@
     "eslint-config-next": "14.2.3",
     "husky": "^9.0.11",
     "postcss": "^8",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
